--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@ubilabs/google-maps-react-hooks": "^2.0.2",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "google-map-react": "^2.2.1",
@@ -17,6 +20,7 @@
     "react-sweetalert2": "^0.5.2",
     "sass": "^1.63.6",
     "sweetalert2": "^11.7.12",
+    "twd97-to-latlng": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
