--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@googlemaps/markerclusterer": "^2.3.1",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.18.1",
