--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "taipei-parking",
   "version": "0.1.0",
+  "homepage": "https://tonia83731.github.io/taipei-parking",
   "private": true,
   "dependencies": {
     "@googlemaps/markerclusterer": "^2.3.1",
@@ -13,6 +14,7 @@
     "@ubilabs/google-maps-react-hooks": "^2.0.2",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
+    "gh-pages": "^4.0.0",
     "google-map-react": "^2.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -30,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
