--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ubilabs/google-maps-react-hooks": "^2.0.2",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
+    "eslint-config-standard": "^17.1.0",
     "gh-pages": "^4.0.0",
     "google-map-react": "^2.2.1",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-sweetalert2": "^0.5.2",
     "sass": "^1.63.6",
+    "styled-components": "^6.0.8",
     "sweetalert2": "^11.7.12",
     "twd97-to-latlng": "^1.0.0",
     "use-places-autocomplete": "^4.0.0",
@@ -34,7 +36,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix"
   },
   "eslintConfig": {
     "extends": [
